--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - master
+  schedule:
+    # 每月3号 执行一遍
+    - cron: '0 0 3 * *'
 
 jobs:
   build:
@@ -28,19 +31,8 @@ jobs:
         name: zhwiki
         path: zhwiki.dict.yaml
 
-    # - name: Extract tag name
-    #   id: tag
-    #   run: |
-    #       version_line=$(cat Makefile | grep 'VERSION=' -m 1)
-    #       web_slang_version_line=$(cat Makefile | grep 'WEB_SLANG_VERSION=' -m 1)
-    #       echo "::set-output name=result::${version_line#VERSION=}+${web_slang_version_line#WEB_SLANG_VERSION=}"
-
-    # - name: Release
-    #   uses: ncipollo/release-action@v1
-    #   with:
-    #     token: ${{ secrets.GITHUB_TOKEN }}
-    #     artifacts: "zhwiki.dict.yaml"
-    #     bodyFile: "CHANGELOG.md"
-    #     commit: ${{ github.sha }}
-    #     tag: ${{ steps.tag.outputs.result }}
-    #     allowUpdates: true
+    - name: Release
+      uses: ncipollo/release-action@v1
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        artifacts: "zhwiki.dict.yaml"
