--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,7 +7,7 @@ on:
   schedule:
     # 每月3号 执行一遍
     - cron: '0 0 3 * *'
-    
+
 permissions:
   actions: write
 
@@ -23,10 +23,9 @@ jobs:
     - name: Prepare Environment
       run: |
           pip3 install -r requirements.txt
-          sudo apt install libime-bin
 
     - name: Build
-      run: make zhwiki.dict zhwiki.dict.yaml
+      run: make zhwiki.dict.yaml
 
     - name: Artifact
       uses: actions/upload-artifact@v3
