--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,6 +28,19 @@ jobs:
     - name: Build
       run: make zhwiki.dict.yaml
 
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: v1.0.0  # 标签名称
+        release_name: Release v1.0.0  # 发布名称
+        body: |
+          Release Notes for v1.0.0
+        draft: false
+        prerelease: false
+
     - name: Artifact
       uses: actions/upload-artifact@v3
       with:
