--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,12 +2,12 @@ name: Build Latest Dictionary Files
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - master
-  schedule:
-    # 每月3号 执行一遍
-    - cron: '0 0 3 * *'
+  # push:
+  #   branches:
+  #     - master
+  # schedule:
+  #   # 每月3号 执行一遍
+  #   - cron: '0 0 3 * *'
 
 permissions:
   actions: write
